[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/Die.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ability.gd" type="Script" id=2]
[ext_resource path="res://assets/pixelfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/1bitpack_kenney_monochrome_transparent_packed.png" type="Texture" id=4]
[ext_resource path="res://assets/fantasy_tileset_Jerom_recolored.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 5 )
region = Rect2( 192, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 5 )
region = Rect2( 224, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 5 )
region = Rect2( 160, 288, 32, 32 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 5 )
region = Rect2( 96, 416, 32, 32 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 5 )
region = Rect2( 160, 448, 32, 32 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 5 )
region = Rect2( 192, 448, 32, 32 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 5 )
region = Rect2( 32, 448, 32, 32 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 5 )
region = Rect2( 0, 544, 32, 32 )

[sub_resource type="SpriteFrames" id=89]
animations = [ {
"frames": [ SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 87 ), SubResource( 86 ), SubResource( 85 ), SubResource( 88 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="TileSet" id=57]
0/name = "fantasy_tileset_Jerom_recolored.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 32, 32, 32 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 256, Vector2( 0, 1 ), 260, Vector2( 0, 2 ), 260, Vector2( 0, 3 ), 4, Vector2( 1, 0 ), 320, Vector2( 1, 1 ), 325, Vector2( 1, 2 ), 325, Vector2( 1, 3 ), 5, Vector2( 2, 0 ), 320, Vector2( 2, 1 ), 325, Vector2( 2, 2 ), 325, Vector2( 2, 3 ), 5, Vector2( 3, 0 ), 64, Vector2( 3, 1 ), 65, Vector2( 3, 2 ), 65, Vector2( 3, 3 ), 1 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 8, 8 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 672, 224, 16, 16 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 4 )
region = Rect2( 688, 224, 16, 16 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 4 )
region = Rect2( 704, 224, 16, 16 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 720, 224, 16, 16 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 4 )
region = Rect2( 736, 224, 16, 16 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 752, 224, 16, 16 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 672, 240, 16, 16 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 688, 240, 16, 16 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 4 )
region = Rect2( 704, 240, 16, 16 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 4 )
region = Rect2( 720, 240, 16, 16 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 4 )
region = Rect2( 736, 240, 16, 16 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 4 )
region = Rect2( 752, 240, 16, 16 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 4 )
region = Rect2( 624, 240, 16, 16 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 4 )
region = Rect2( 656, 240, 16, 16 )

[sub_resource type="SpriteFrames" id=41]
animations = [ {
"frames": [ SubResource( 42 ), SubResource( 45 ), SubResource( 44 ), SubResource( 47 ), SubResource( 46 ), SubResource( 43 ) ],
"loop": true,
"name": "empty",
"speed": 10.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 90 ), SubResource( 91 ) ],
"loop": true,
"name": "filled",
"speed": 10.0
} ]

[node name="Ability" type="AnimatedSprite"]
position = Vector2( 608, 480 )
frames = SubResource( 89 )
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
show_behind_parent = true
tile_set = SubResource( 57 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( -131075, 0, 0, -131074, 0, 1, -131073, 0, 2, -196608, 0, 1, -196607, 0, 2, -196606, 0, 3, -65539, 0, 65536, -65538, 0, 131074, -65537, 0, 65537, -131072, 0, 65538, -131071, 0, 131073, -131070, 0, 65539, -3, 0, 65536, -2, 0, 65537, -1, 0, 65538, -65536, 0, 65537, -65535, 0, 65537, -65534, 0, 131075, 65533, 0, 131072, 65534, 0, 131074, 65535, 0, 65537, 0, 0, 131074, 1, 0, 65538, 2, 0, 65539, 131069, 0, 131072, 131070, 0, 65538, 131071, 0, 131074, 65536, 0, 131073, 65537, 0, 65537, 65538, 0, 131075, 196605, 0, 196608, 196606, 0, 196609, 196607, 0, 196610, 131072, 0, 196609, 131073, 0, 196609, 131074, 0, 196611 )

[node name="Name" type="Label" parent="."]
anchor_left = 1.0
anchor_top = -0.5
anchor_right = 1.0
anchor_bottom = -0.5
margin_left = 72.0
margin_right = 336.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.898039, 0.690196, 0.513726, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Lightning Bolt: 30"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Die1" parent="." instance=ExtResource( 1 )]
position = Vector2( 48, 0 )
frames = SubResource( 41 )

[node name="Die2" parent="." instance=ExtResource( 1 )]
position = Vector2( 64, 0 )
frames = SubResource( 41 )

[node name="Die3" parent="." instance=ExtResource( 1 )]
position = Vector2( 80, 0 )
frames = SubResource( 41 )
